add min/max discount for promotion
